@@ -1,5 +1,8 @@
 Release Notes
 
+* 7/6/2015
+  * added size check in taskParam copy from DEFT
+
 * 6/26/2015
   * added 50% of safety mergin to cpuTime
   * added more message for input file shortage
